--- a/LevelSelector.uplugin
+++ b/LevelSelector.uplugin
@@ -8,6 +8,7 @@
 	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
+	"FabURL": "com.epicgames.launcher://ue/Fab/product//052be8a6-ccd4-4042-98c6-56de36741d43",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"EngineVersion": "5.5.0",
